--- a/argoscript/nginx.yaml
+++ b/argoscript/nginx.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.26.2
+        image: nginx:latest
         ports:
         - containerPort: 80
 ---
